# ARGO

./: .argo_watch_state.json  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample_workflow_context.json  test_watch.py
agents/: orpheus.py
cli/: main.py
config/: approval_policy.yaml
core/: embed.py  expand.py  ingest.py  retrieve.py  summarize.py
docs/: ARCHITECTURE.md  CONFIG.md  SECRETS.md
faiss_index/: metadata.txt
migrations/: env.py
migrations/versions/: 07df3ae8fa44_initial_schema_capture.py
phases/: PHASE1_ORPHEUS.md  PHASE2_LYNCEUS.md
src/argo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/argo/cli/: config_manager.py  help_system.py  main.py  workflow_manager.py
src/argo/core/: approval_policy.py  embed.py  enhanced_evidence.py  expand.py  faiss_index.py  ingest.py  local_embeddings.py  logging_config.py  output_validator.py  report_templates.py  retrieve.py  runbook_state.py  stix_export.py  summarize.py  watch_folder.py
src/argo/runbooks/: orpheus_graph.py
stores/: pg_schema.sql
stores/migrations/: 2025_08_29_add_alias.sql
tasks/: 01_scaffolding.md  02_ingestion.md  03_retrieval.md  04_orpheus_flow.md  05_outputs.md  06_cli.md  07_watch_folder.md  08_exposure.md  TASKS_INDEX.md
